--- a/notebooks/7-ExpandedContent-Week3.ipynb
+++ b/notebooks/7-ExpandedContent-Week3.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "82ebd912-6b31-475e-86d9-4fac57cfcdcb",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "21d6c6cc-86a5-46ac-ad15-ddfe21331a0d",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "97a9ba7a-2fde-4625-a963-c37335270d5c",
    "metadata": {},
    "outputs": [],
@@ -68,29 +68,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a649a419-30a9-48bc-b13d-df872af711c6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/envs/vsa/lib/python3.10/site-packages/pandas/core/frame.py:717: DeprecationWarning: Passing a BlockManager to DataFrame is deprecated and will raise in a future version. Use public APIs instead.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Shape of data: (23905, 13)\n",
-      "Memory Usage: 2.37+ MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data_path = '../data/huberman_minilm-256.parquet'\n",
+    "data_path = 'data/huberman_subset_minilm_256.parquet'\n",
     "data = FileIO.load_parquet(data_path)"
    ]
   },
@@ -104,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "039f0afd-690f-465c-b34f-e236bdf29ca7",
    "metadata": {},
    "outputs": [],
@@ -125,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "850f8a51-36c0-4266-98c1-e5720de44dd7",
    "metadata": {},
    "outputs": [],
@@ -189,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "022f2d97-56f6-4596-bb53-222c3bb020b7",
    "metadata": {},
    "outputs": [],
@@ -198,12 +181,17 @@
     "# START YOUR CODE HERE #\n",
     "########################\n",
     "\n",
-    "expanded_content = create_expanded_content(None)\n",
-    "flattened_content = None\n",
+    "expanded_content = create_expanded_content(data=data,\n",
+    "                                           window_size=1,\n",
+    "                                           num_episodes=193,\n",
+    "                                           key_field='video_id',\n",
+    "                                           chunk_list=None)\n",
+    "\n",
+    "flattened_content = [content for episode in expanded_content for content in episode]\n",
     "\n",
     "# azimuth check to ensure you're heading in the right direction\n",
     "flat_length = len(flattened_content)\n",
-    "data_legnth = len(data)\n",
+    "data_length = len(data)\n",
     "assert flat_length == data_length, 'Mismatch in lengths. Double check how you flattened your expanded_content'\n",
     "\n",
     "def join_expanded_content(data: list[dict],\n",
@@ -212,15 +200,17 @@
     "    '''\n",
     "    Updates data with an expanded_content key.\n",
     "    '''\n",
-    "\n",
     "    \n",
+    "    for i, expanded_content in enumerate(flattened_content):\n",
+    "        data[i]['expanded_content'] = expanded_content\n",
+    "\n",
     "########################\n",
     "# END YOUR CODE HERE #\n",
     "########################\n",
     "    \n",
     "    return data\n",
     "\n",
-    "data = join_expanded_content(None, None)"
+    "data = join_expanded_content(data, flattened_content)"
    ]
   },
   {
@@ -233,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "8cc86127-1cf9-4f4b-bf59-3b83ef266cf2",
    "metadata": {},
    "outputs": [],
@@ -258,14 +248,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "93deae35-08b2-4eec-b8da-7e6743f83db6",
    "metadata": {},
    "outputs": [],
    "source": [
     "from rich import print\n",
     "\n",
-    "# print(properties)"
+    "print(properties)"
    ]
   },
   {
@@ -290,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "ac81c228-d7d9-4db7-8cf7-5ec4fa326594",
    "metadata": {},
    "outputs": [],
@@ -302,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "2fde8c03-0d00-43c5-a837-80b2597c8edd",
    "metadata": {},
    "outputs": [],
@@ -350,15 +340,23 @@
     "    doc_id = d['doc_id']\n",
     "    expanded_content = d['expanded_content']\n",
     "    uuid = doc_id_cache[doc_id]\n",
-    "    collection.data.update(uuid=uuid, properties={'expanded_content': expanded_content}"
+    "    collection.data.update(uuid=uuid, properties={'expanded_content': expanded_content})"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76356ea0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "vsa",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "vsa"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -370,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
