--- a/src/evaluation/deepeval_demo.ipynb
+++ b/src/evaluation/deepeval_demo.ipynb
@@ -5,16 +5,7 @@
    "execution_count": 1,
    "id": "424b4361-f20c-4f54-afff-7ba76578667c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -30,10 +21,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "7dba2cec-e732-4a67-9e59-bfaf14d2e1f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-11-10 18:01:03.598 WARNING streamlit.runtime.caching.cache_data_api: No runtime found, using MemoryCacheStorageManager\n"
+     ]
+    }
+   ],
    "source": [
     "from deepeval import evaluate\n",
     "from deepeval.metrics import FaithfulnessMetric, AnswerRelevancyMetric\n",
@@ -45,7 +44,7 @@
     "from src.llm.llm_interface import LLM\n",
     "from src.llm.llm_utils import get_token_count, load_azure_openai\n",
     "from src.llm.prompt_templates import question_answering_prompt_series, huberman_system_message\n",
-    "from app_features import generate_prompt_series\n",
+    "from src.app_functions import generate_prompt_series\n",
     "\n",
     "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
     "from tqdm import tqdm\n",
@@ -60,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "3f89c8ad-7fb8-4982-accd-dba8436fc84e",
    "metadata": {
     "scrolled": true
@@ -79,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "id": "2d4ebecf-5553-4707-8ee8-1e35fc1fc676",
    "metadata": {},
    "outputs": [],
@@ -99,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "id": "444bf30f-9a5b-4994-8a77-3c0ef571e40a",
    "metadata": {},
    "outputs": [
@@ -107,22 +106,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2247250/3431604043.py:1: ResourceWarning: unclosed <ssl.SSLSocket fd=68, family=AddressFamily.AF_INET, type=SocketKind.SOCK_STREAM, proto=6, laddr=('10.18.0.6', 32790), raddr=('34.149.137.116', 443)>\n",
-      "  client = get_weaviate_client()\n",
-      "ResourceWarning: Enable tracemalloc to get the object allocation traceback\n"
+      "/Users/matiasweber/.pyenv/versions/3.10.14/lib/python3.10/site-packages/weaviate/warnings.py:130: DeprecationWarning: Dep005: You are using weaviate-client version 4.5.4. The latest version is 4.9.3.\n",
+      "            Please consider upgrading to the latest version. See https://weaviate.io/developers/weaviate/client-libraries/python for details.\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
    "source": [
     "client = get_weaviate_client()\n",
-    "turbo = LLM(model_name='gpt-3.5-turbo-0125')\n",
-    "azure = load_azure_openai(model_name='gpt-4')\n",
+    "turbo = LLM(model_name='gpt-4o-mini')\n",
+    "azure = LLM(model_name='gpt-4o')\n",
+    "# azure = load_azure_openai(model_name='gpt-4')\n",
     "collection_name = 'Huberman_minilm_128'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "id": "c7aca859-f202-48e9-b329-e39ca6505db8",
    "metadata": {},
    "outputs": [],
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 14,
    "id": "a6a84919-1f2d-43e9-9527-aa3b81ae07ef",
    "metadata": {},
    "outputs": [],
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 15,
    "id": "e48edd30-c6b9-40be-80cd-cf43c25f2c14",
    "metadata": {},
    "outputs": [],
@@ -253,29 +253,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 16,
    "id": "48c7f866-1e79-46b8-9738-2ae9353eb2bb",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "  0%|                                                                                                                                          | 0/10 [00:00<?, ?it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A/anaconda/envs/vsa/lib/python3.10/site-packages/openai/_legacy_response.py:347: ResourceWarning: unclosed <socket.socket fd=131, family=AddressFamily.AF_INET, type=SocketKind.SOCK_STREAM, proto=6, laddr=('10.18.0.6', 56944), raddr=('52.242.46.17', 443)>\n",
-      "  async def wrapped(*args: P.args, **kwargs: P.kwargs) -> LegacyAPIResponse[R]:\n",
-      "ResourceWarning: Enable tracemalloc to get the object allocation traceback\n",
-      "/anaconda/envs/vsa/lib/python3.10/site-packages/openai/_legacy_response.py:347: ResourceWarning: unclosed <socket.socket fd=136, family=AddressFamily.AF_INET, type=SocketKind.SOCK_STREAM, proto=6, laddr=('10.18.0.6', 44686), raddr=('104.18.7.192', 443)>\n",
-      "  async def wrapped(*args: P.args, **kwargs: P.kwargs) -> LegacyAPIResponse[R]:\n",
-      "ResourceWarning: Enable tracemalloc to get the object allocation traceback\n",
-      "/anaconda/envs/vsa/lib/python3.10/asyncio/selector_events.py:704: ResourceWarning: unclosed transport <_SelectorSocketTransport fd=136 read=idle write=<idle, bufsize=0>>\n",
-      "  _warn(f\"unclosed transport {self!r}\", ResourceWarning, source=self)\n",
-      "ResourceWarning: Enable tracemalloc to get the object allocation traceback\n"
-     ]
+     "text": []
     },
     {
      "data": {
@@ -307,7 +292,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|                                                                                                                                          | 0/10 [00:37<?, ?it/s]\n"
+      "  0%|                                                                                                 | 0/10 [00:15<?, ?it/s]\n"
      ]
     }
    ],
@@ -317,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "id": "766a8a26-c10b-4d13-af2e-9379409eadc6",
    "metadata": {},
    "outputs": [],
@@ -347,9 +332,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "vsa",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "vsa"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -361,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
