unit tests notebook 1

--- a/notebooks/1-Data_Preprocessing_Week1_COLAB.ipynb
+++ b/notebooks/1-Data_Preprocessing_Week1_COLAB.ipynb
@@ -442,12 +442,12 @@
    "metadata": {},
    "source": [
     "### Tokens\n",
-    "In the above example we split our content on whitespace which effectively splits the entire episode into a list of words....but LLMs [operate on tokens](https://uplimit.com/course/rag-applications/v2/module/module_clt3drpxz006f16lf8iulafw4#corise_clpiy1bpu00072e6ghsn5xf1z). Tokens are words or sub-parts of words, so the word \"texting\" might be broken into two tokens `text` and `##ing`. Punctuation are also given their own tokens, so a period, a comma, or an apostrophe are all going to have their own tokenized representation.  A [750 word document will be about 1000 tokens](https://www.anyscale.com/blog/num-every-llm-developer-should-know), in other words the token to word ratio is roughly 1.3 tokens = 1 word. Let's see what this looks like in practice. "
+    "In the above example we split our content on whitespace which effectively splits the entire episode into a list of words....but LLMs [operate on tokens](https://uplimit.com/course/rag-applications/v2/module/module_clt3drpxz006f16lf8iulafw4#corise_clpiy1bpu00072e6ghsn5xf1z). Tokens are words or sub-parts of words, so the word \"texting\" might be broken into two tokens `text` and `##ing`. Punctuation are also given their own tokens, so a period, a comma, or an apostrophe are all going to have their own tokenized representation.  A [750 word document will be about 1000 tokens](https://www.anyscale.com/blog/num-every-llm-developer-should-know), in other words the token to word ratio is roughly 1.3 tokens = 1 word. Let's see what this looks like in practice. In practice, we will see this number is close to 1.2 tokens."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "dd59eb64",
    "metadata": {
     "colab": {
@@ -459,7 +459,7 @@
    "outputs": [],
    "source": [
     "mean_word_count = ceil(np.mean(content_lengths))\n",
-    "token_to_word_ratio = 1.3\n",
+    "token_to_word_ratio = 1.2\n",
     "approx_token_count = ceil(mean_word_count * token_to_word_ratio)\n",
     "\n",
     "print(f'The mean word count for each episode is about {mean_word_count} words, which corresponds to a rough token count of {approx_token_count} tokens.')"
@@ -470,7 +470,7 @@
    "id": "3063fbb3",
    "metadata": {},
    "source": [
-    "For the sake of precision, let's actually tokenize our content and see how close we get to the **1.3** `token_to_word_ratio`.  We'll use the tokenizer for the `gpt-4o-mini` series of models (avilable through the `tikotken` library).  I'll discuss why I'm choosing this particular tokenizer later in the notebook. "
+    "For the sake of precision, let's actually tokenize our content and see how close we get to the **1.2** `token_to_word_ratio`.  We'll use the tokenizer for the `gpt-4o-mini` series of models (avilable through the `tikotken` library).  I'll discuss why I'm choosing this particular tokenizer later in the notebook. "
    ]
   },
   {
@@ -506,7 +506,7 @@
    "id": "ae2e23bc",
    "metadata": {},
    "source": [
-    "How close to this approximate **1.3 token:word** ratio were we...."
+    "How close to this approximate **1.2 token:word** ratio were we...."
    ]
   },
   {
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "5d7e0d93",
    "metadata": {},
    "outputs": [],
@@ -756,9 +756,9 @@
     "        gpt_txt_splitter = SentenceSplitter(chunk_size=chunk_size, tokenizer=encoding.encode, chunk_overlap=chunk_overlap)\n",
     "        results = split_contents(subset, gpt_txt_splitter)\n",
     "        self.assertEqual(len(results), 3)\n",
-    "        self.assertEqual(len(results[0]), 160)\n",
-    "        self.assertEqual(len(results[1]), 87)\n",
-    "        self.assertEqual(len(results[2]), 152)\n",
+    "        self.assertEqual(len(results[0]), 154)\n",
+    "        self.assertEqual(len(results[1]), 85)\n",
+    "        self.assertEqual(len(results[2]), 146)\n",
     "        self.assertTrue(isinstance(results, list))\n",
     "        self.assertTrue(isinstance(results[0], list))\n",
     "        self.assertTrue(isinstance(results[0][0], str))\n",
@@ -1355,7 +1355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "f37a7aea",
    "metadata": {},
    "outputs": [],
@@ -1391,9 +1391,9 @@
     "\n",
     "        #run assertion tests\n",
     "        self.assertEqual(len(results), 3)\n",
-    "        self.assertEqual(len(results[0]), 160)\n",
-    "        self.assertEqual(len(results[1]), 87)\n",
-    "        self.assertEqual(len(results[2]), 152)\n",
+    "        self.assertEqual(len(results[0]), 154)\n",
+    "        self.assertEqual(len(results[1]), 85)\n",
+    "        self.assertEqual(len(results[2]), 146)\n",
     "        self.assertTrue(isinstance(results, list))\n",
     "        self.assertTrue(isinstance(results[0], list))\n",
     "        self.assertTrue(isinstance(results[0][0], tuple))\n",
@@ -1501,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "14d9fe2a",
    "metadata": {},
    "outputs": [],
@@ -1538,12 +1538,12 @@
     "        #joint metadata\n",
     "        results = join_metadata(subset, text_vector_tuples)\n",
     "        #run assertion tests\n",
-    "        self.assertEqual(len(results), 399)\n",
+    "        self.assertEqual(len(results), 385)\n",
     "        self.assertEqual(len(results[0]), 13)\n",
     "        self.assertTrue(isinstance(results, list))\n",
     "        self.assertTrue(isinstance(results[0], dict))\n",
     "        self.assertTrue(isinstance(results[0]['content'], str))\n",
-    "        self.assertEqual(results[300]['doc_id'], 'kpTJqwIfHcM_53')\n",
+    "        self.assertEqual(results[300]['doc_id'], 'kpTJqwIfHcM_61')\n",
     "        self.assertEqual(len(results[0]['content_embedding']), 384)\n",
     "        self.assertTrue(isinstance(results[0]['content_embedding'], list))\n",
     "unittest.TextTestRunner().run(unittest.TestLoader().loadTestsFromTestCase(TestJoinMetaData))"
@@ -1630,7 +1630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "fc3e6f21",
    "metadata": {},
    "outputs": [],
@@ -1665,12 +1665,12 @@
     "        #execute test\n",
     "        dataset = create_dataset(subset, model, gpt_txt_splitter, save_to_disk=False)\n",
     "        #run assertion tests\n",
-    "        self.assertEqual(len(dataset), 399)\n",
+    "        self.assertEqual(len(dataset), 385)\n",
     "        self.assertEqual(len(dataset[0]), 13)\n",
     "        self.assertTrue(isinstance(dataset, list))\n",
     "        self.assertTrue(isinstance(dataset[0], dict))\n",
     "        self.assertTrue(isinstance(dataset[0]['content'], str))\n",
-    "        self.assertEqual(dataset[300]['doc_id'], 'kpTJqwIfHcM_53')\n",
+    "        self.assertEqual(dataset[300]['doc_id'], 'kpTJqwIfHcM_61')\n",
     "        self.assertEqual(len(dataset[0]['content_embedding']), 384)\n",
     "        self.assertTrue(isinstance(dataset[0]['content_embedding'], list))\n",
     "unittest.TextTestRunner().run(unittest.TestLoader().loadTestsFromTestCase(TestCreateDataset))"
