--- a/notebooks/3-Retrieval_Evaluation_Week1.ipynb
+++ b/notebooks/3-Retrieval_Evaluation_Week1.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "aa6a6f95-91c6-4a08-a3a0-2aafc2d56b77",
    "metadata": {},
    "outputs": [],
@@ -101,10 +101,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c9968b62-3814-40b9-bb2a-8c76968825c0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/workspaces/rag-applications/.venv/lib/python3.10/site-packages/sentence_transformers/cross_encoder/CrossEncoder.py:13: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
+      "  from tqdm.autonotebook import tqdm, trange\n",
+      "/workspaces/rag-applications/.venv/lib/python3.10/site-packages/pydantic/_internal/_config.py:291: PydanticDeprecatedSince20: Support for class-based `config` is deprecated, use ConfigDict instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.9/migration/\n",
+      "  warnings.warn(DEPRECATION_MESSAGE, DeprecationWarning)\n",
+      "/workspaces/rag-applications/.venv/lib/python3.10/site-packages/pydantic/_internal/_generate_schema.py:312: PydanticDeprecatedSince20: `json_encoders` is deprecated. See https://docs.pydantic.dev/2.9/concepts/serialization/#custom-serializers for alternatives. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.9/migration/\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Num queries in Golden Dataset: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">100</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "Num queries in Golden Dataset: \u001b[1;36m100\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from src.evaluation.retrieval_evaluation import calc_hit_rate_scores, calc_mrr_scores, record_results\n",
     "from src.database.weaviate_interface_v4 import WeaviateWCS\n",
@@ -112,6 +138,9 @@
     "\n",
     "\n",
     "data_path = '../data/golden_datasets/golden_256.json'\n",
+    "api_key = os.environ['WEAVIATE_API_KEY']\n",
+    "url = os.environ['WEAVIATE_ENDPOINT']\n",
+    "model_path = '/workspaces/rag-applications/models/allminilm-finetuned-256' # 'sentence-transformers/all-MiniLM-L6-v2'\n",
     "\n",
     "#################\n",
     "##  START CODE ##\n",
@@ -119,12 +148,12 @@
     "\n",
     "\n",
     "### Load QA dataset\n",
-    "golden_dataset = None\n",
+    "golden_dataset = FileIO.load_json(data_path)\n",
     "\n",
     "### Instantiate Weaviate client and set Collection name\n",
-    "retriever = None\n",
+    "retriever = WeaviateWCS(endpoint=url, api_key=api_key, model_name_or_path=model_path)\n",
     "# retriever.show_all_collections()\n",
-    "collection_name = None\n",
+    "collection_name = 'Huberman_minilm_finetuned_256'\n",
     "\n",
     "\n",
     "#################\n",
@@ -145,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "255bdabd-770e-4b12-8bd8-54e5cdc64f77",
    "metadata": {},
    "outputs": [],
@@ -266,15 +295,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d42568cd-d0e3-4640-8865-37b6dff80307",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Queries: 100%|██████████| 100/100 [00:07<00:00, 13.56it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Total Processing Time: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.12</span> minutes\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "Total Processing Time: \u001b[1;36m0.12\u001b[0m minutes\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#################\n",
     "##  START CODE ##\n",
     "#################\n",
-    "eval_results = retrieval_evaluation(None, None, None)"
+    "\n",
+    "eval_results = retrieval_evaluation(dataset=golden_dataset, \n",
+    "                                    collection_name=collection_name, \n",
+    "                                    retriever=retriever,\n",
+    "                                    retrieve_limit=5,\n",
+    "                                    chunk_size=256,\n",
+    "                                    query_properties=['content'],\n",
+    "                                    return_properties=['doc_id', 'content'],\n",
+    "                                    dir_outpath='./eval_results',\n",
+    "                                    include_miss_info=False\n",
+    "                                    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a96763fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'n': 5,\n",
+       " 'Retriever': '/workspaces/rag-applications/models/allminilm-finetuned-256',\n",
+       " 'chunk_size': 256,\n",
+       " 'query_props': ['content'],\n",
+       " 'kw_hit_rate': 0.65,\n",
+       " 'kw_mrr': 0.54,\n",
+       " 'vector_hit_rate': 0.59,\n",
+       " 'vector_mrr': 0.44,\n",
+       " 'total_misses': 21,\n",
+       " 'total_questions': 100}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "e89aa447",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Queries: 100%|██████████| 100/100 [00:11<00:00,  8.77it/s]\n",
+      "\u001b[32m2024-11-23 23:38:01.590\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.evaluation.retrieval_evaluation\u001b[0m:\u001b[36mexecute_evaluation\u001b[0m:\u001b[36m455\u001b[0m - \u001b[1mTotal Evaluation Time: 0.19 minutes\u001b[0m\n",
+      "\u001b[32m2024-11-23 23:38:01.591\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.preprocessor.preprocessing\u001b[0m:\u001b[36msave_as_json\u001b[0m:\u001b[36m111\u001b[0m - \u001b[1mData saved as json file here: ./eval_results/retrieval_eval_256_2024-11-23-23-38-01.json\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "RetrievalEvaluation(retrieve_limit=5, top_k=5, retriever='sentence-transformers/all-MiniLM-L6-v2', reranker='None', chunk_size=256, chunk_overlap=0, total_misses=18, total_questions=100, alpha=None, search_type='all', kw_raw_hits=65, kw_mrr=0.54, vector_raw_hits=56, vector_mrr=0.42, hybrid_raw_hits=74, hybrid_mrr=0.59, kw_hit_rate=0.65, vector_hit_rate=0.56, hybrid_hit_rate=0.74, evaluation_time='0.19 minutes')"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from src.evaluation.retrieval_evaluation import RetrievalEvaluationService\n",
+    "\n",
+    "rts = RetrievalEvaluationService(retriever)\n",
+    "\n",
+    "res = rts.execute_evaluation(dataset=golden_dataset, \n",
+    "                                    collection_name=collection_name, \n",
+    "                                    retrieve_limit=5,\n",
+    "                                    chunk_size=256,\n",
+    "                                    query_properties=['content'],\n",
+    "                                    dir_outpath='./eval_results',\n",
+    "                                    include_miss_info=False\n",
+    "                                    )\n",
+    "res"
    ]
   },
   {
@@ -355,7 +487,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
