--- a/notebooks/8-Text2SQL_Week3.ipynb
+++ b/notebooks/8-Text2SQL_Week3.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "id": "f8bf9ae7",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "44df6535-0ce4-486c-89bd-1169735e5303",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "47153a83",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c6ce1c63",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d99bf269",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "8c4c2620",
    "metadata": {},
    "outputs": [],
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "d0fe4451",
    "metadata": {},
    "outputs": [],
@@ -166,10 +166,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "3fb3d385",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1,)]\n"
+     ]
+    }
+   ],
    "source": [
     "# run a command to check that the table exists on the DB\n",
     "_ = cursor.execute(\"SELECT count(*) FROM sqlite_master WHERE type='table' AND name='huberman';\")\n",
@@ -189,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "bc6fa512-cfdc-47f6-a4cf-2496c329dd2b",
    "metadata": {},
    "outputs": [],
@@ -208,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "ff1e9813-2cb5-43e9-bf9f-da979e92eb8f",
    "metadata": {},
    "outputs": [],
@@ -243,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "75048b7c-bca2-49c1-96dc-e650607ef694",
    "metadata": {},
    "outputs": [],
@@ -255,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77700bbc-57bf-4404-9415-60ae5cc6e958",
+   "id": "b1d313ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "93d43ce6",
    "metadata": {},
    "outputs": [],
@@ -293,10 +301,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "3653dade-a706-4bc1-9f83-1c61bee0c916",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ID: 4\n",
+      "Guest: Dr. E.J. Chichilnisky\n",
+      "Title: Dr. E.J. Chichilnisky: How the Brain Works, Curing Blindness & How to Navigate a Career Path\n",
+      "Summary: In the Huberman Lab podcast episode featuring Dr. E.J. Chichilnisky, the discussion centers on understanding visual perception and applying that knowledge to the development of neural prostheses to cure blindness. Dr. Chichilnisky, a professor at Stanford University, delves into the encoding of the visual world by neurons in the brain and the potential to engineer devices that can not only restore sight to the blind but also enhance memory and cognition. The conversation also explores the importance of choosing one's professional path, with Dr. Chichilnisky sharing his unconventional journey through science and how it shaped his focus on neuroscience and medicine. The episode emphasizes the significance of translating scientific understanding into practical applications that can improve lives.\n",
+      "View Count: 111855\n"
+     ]
+    }
+   ],
    "source": [
     "command = \"SELECT * FROM huberman\"\n",
     "result = get_response(command)\n",
@@ -363,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "b50344bc-f981-4bf5-a881-e31bed50aae8",
    "metadata": {},
    "outputs": [],
@@ -386,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "3f678b5b-1c49-4947-807f-219ffb00053b",
    "metadata": {},
    "outputs": [],
@@ -430,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "a1bf0021-19fe-421b-9738-f5a110e32c3e",
    "metadata": {},
    "outputs": [],
@@ -442,10 +462,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "10bca57b-c1ef-4c79-b498-a13b7b3ca1ab",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SQL Route label --> sql\n",
+      "Regular Route label --> regular\n"
+     ]
+    }
+   ],
    "source": [
     "print(f'SQL Route label --> {layer(\"How many episodes have over 100,000 views?\").name}')\n",
     "print(f'Regular Route label --> {layer(\"What is the difference between healthspan and longevity?\").name}')"
@@ -470,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "df549cef-1444-42eb-a2f6-56bf8611761e",
    "metadata": {},
    "outputs": [],
@@ -488,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "dfdbb705-daed-4de0-a429-43ee220e670a",
    "metadata": {},
    "outputs": [],
@@ -498,10 +527,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "e800fc64-0af9-4b33-b060-4912dbf38924",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\"How can deep rest states help reset dopamine levels in the brain's basal ganglia?\", 'How does the historical use of substances like coffee and nicotine compare to the modern use of neurotechnologies for augmentation?', 'What are the considerations related to the invasive nature of neurotechnologies when it comes to performance enhancement?']\n",
+      "\n",
+      "['What are the titles of all the episodes featuring Andrew Huberman?', 'How many episodes have a summary that mentions \"neuroscience\"?', 'List the guests who have appeared on the podcast more than once.']\n"
+     ]
+    }
+   ],
    "source": [
     "print(golden_reg_queries[:3]) \n",
     "print()\n",
@@ -519,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "ba5db116-045c-4a3a-ad2d-38651beba4fa",
    "metadata": {},
    "outputs": [],
@@ -542,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "146d746a-5b09-4fd2-ade8-59e90a143dfa",
    "metadata": {},
    "outputs": [],
@@ -561,10 +600,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "7baf1e18-3259-4517-afa8-880901ac898a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7a3aa186398b49a8b14730c3c236914c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating embeddings:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cfcd0c13b407480e8909a3ce9225e335",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training:   0%|          | 0/500 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "X, y = zip(*training_data)\n",
     "\n",
@@ -581,10 +649,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "8683e864-a945-4714-99b0-8c0115c82950",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2024-12-19 17:54:55 INFO semantic_router.utils.logger Saving route config to ./semantic_router.json\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "#save router to disk for future use in your app\n",
     "layer.to_json('./semantic_router.json')"
@@ -592,10 +668,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "94c90f66-cb17-42d3-a490-84f32d55277e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2024-12-19 17:54:55 INFO semantic_router.utils.logger Loading route config from ./semantic_router.json\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "#load router from disk and test\n",
     "router = RouteLayer.from_json('./semantic_router.json')"
@@ -611,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 39,
    "id": "54570db9-8bdd-42bc-99c9-98cda952e18c",
    "metadata": {},
    "outputs": [],
@@ -623,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 40,
    "id": "d94796e1-8944-4535-89ee-8eab4c59c165",
    "metadata": {},
    "outputs": [
@@ -657,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "3bdb8052-3b6d-488f-a71d-7a7203eb8ae7",
    "metadata": {},
    "outputs": [],
@@ -706,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 30,
    "id": "8b8dc069-0c6b-454d-8312-9d340ad74c3f",
    "metadata": {},
    "outputs": [],
@@ -845,10 +929,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 41,
    "id": "8bd16534-1693-4274-84f7-c178935846a9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.10/site-packages/weaviate/warnings.py:329: ResourceWarning: Con004: The connection to Weaviate was not closed properly. This can lead to memory leaks.\n",
+      "            Please make sure to close the connection using `client.close()`.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "llm = LLM()\n",
     "retriever = WeaviateWCS(endpoint, api_key)\n",
@@ -876,10 +970,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "0ae7eeea-0ac7-4d1a-96be-b7284914aebb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2024-12-19 18:38:46.721\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m__call__\u001b[0m:\u001b[36m111\u001b[0m - \u001b[1mSQL Command: SELECT guests, COUNT(guests) as appearance_count FROM huberman WHERE guests NOT LIKE '%Andrew Huberman%' GROUP BY guests ORDER BY appearance_count DESC LIMIT 1;\u001b[0m\n",
+      "\u001b[32m2024-12-19 18:38:46.722\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m__call__\u001b[0m:\u001b[36m115\u001b[0m - \u001b[1mRaw SQL Answer: [('Dr. Andy Galpin', 8)]\u001b[0m\n",
+      "\u001b[32m2024-12-19 18:38:47.505\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m__call__\u001b[0m:\u001b[36m119\u001b[0m - \u001b[1mParsed SQL Answer: Dr. Andy Galpin has appeared on the show 8 times, which is the most appearances by a guest other than Andrew Huberman.\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "query = \"Which guest has appeared on the show the most times, other than Andrew Huberman, and how many times\"\n",
     "route = router(query).name\n",
@@ -896,10 +1000,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "0a7934a6-5fec-4e92-8aef-3bb35f7180d4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SQL Response:\n",
+      "Dr. Andy Galpin has appeared on the show 8 times, which is the most appearances by a guest other than Andrew Huberman.\n",
+      "\n",
+      "Weaviate Returned Context:\n",
+      "Welcome to the Huberman Lab Podcast, where we discuss science and science-based tools for everyday life. I'm Andrew Huberman, and I'm a professor of neurobiology and ophthalmology at Stanford School of Medicine. My guest today is Rick Rubin. Rick Rubin is a world-renowned music producer, having worked with an enormous number of incredible artists, producing, for instance, Red Hot Chili Peppers, Beastie Boys, Jay-Z, Johnny Cash, Adele, Lady Gaga, Tom Petty, and of course, Slayer. This last year, Rick also authored his first book, which is a truly incredible exploration into the creative process. His book is entitled, The Creative Act, A Way of Being. Rick has appeared once before on the Huberman Lab podcast. And during that appearance, he offered to answer listeners and viewers' questions. Those questions were put in the comment section on YouTube, and we received thousands of them. So today, Rick answers your questions about the creative process. I also took note of the feedback that when Rick previously appeared on the Huberman Lab podcast, that perhaps I spoke a bit more than the audience would have preferred.\n",
+      "\n",
+      "*********\n",
+      "\n",
+      "Welcome to the Huberman Lab Podcast, where we discuss science and science-based tools for everyday life. I'm Andrew Huberman, and I'm a professor of neurobiology and ophthalmology at Stanford School of Medicine. Today, my guest is Tony Hawk. Tony Hawk is one of the most celebrated and accomplished professional skateboarders of all time. For more than 40 years, he has been at the forefront of the sport. And I don't mean just doing a sport for more than 40 years. I truly mean he has been at the forefront of skateboarding, developing new maneuvers, aka tricks, that include incredible feats like the 900, a 900 degree spin in the air, as well as numerous other maneuvers that have really pushed the entire sport forward. He's also completely popularized the sport through his video game and through his ambassadorship for skateboarding. In fact, few, if any, names are synonymous with skateboarding in the general public as Tony Hawk. And he is oh so deserved of that title because for more than 40 years, he has shown up as the consummate professional. He is kind, he is respectful, and he is completely committed to his craft.\n",
+      "\n",
+      "*********\n",
+      "\n",
+      "Welcome to the Huberman Lab guest series, where I and an expert guest discuss science and science-based tools for everyday life. I'm Andrew Huberman, and I'm a professor of neurobiology and ophthalmology at Stanford School of Medicine. Today's episode is the third in the six-episode series on fitness, exercise, and performance. Today's episode is all about endurance and fat loss, that is, the specific protocols required to achieve the four different kinds of endurance and how to maximize fat loss. Dr. Andy Galpin, great to be back. Today, we're going to talk about endurance. And I'm very interested in this conversation because I, like many other people, strive to get a certain amount of cardiovascular work in each week, maybe a longish jog, maybe a swim, ride the bike, et cetera. But when I think about the word endurance, the idea that almost immediately comes to mind is about doing something for a long period of time repeatedly. But I have a feeling that there are other ways to trigger this adaptation that we call the endurance adaptation. So I'm excited to learn about that. I'm also excited to learn about the fuel systems in the body that allow for endurance and other modes of repeated activity.\n",
+      "\n",
+      "*********\n",
+      "\n",
+      "Welcome to the Huberman Lab guest series, where I and an expert guest discuss science and science-based tools for everyday life. I'm Andrew Huberman, and I'm a professor of neurobiology and ophthalmology at Stanford School of Medicine. Today's episode marks the first in a four-episode series all about mental health. The expert guest for this series is Dr. Paul Conte. Dr. Paul Conte is a medical doctor and psychiatrist who completed his medical training at Stanford University School of Medicine, and then went on to become a chief resident of psychiatry at Harvard Medical School. He then went on to found the Pacific Premier Group, which is a collection of psychiatrists and therapists who are expert in treating all types of psychiatric disorders and life stressors. Across the four episodes of this series on mental health, Dr. Conti teaches us about the structure of our own minds and how to think about our own minds as a way to enhance our mental health. He explains how our subconscious mind and our conscious mind interact to drive our emotions, our decision making and our behavior.\n"
+     ]
+    }
+   ],
    "source": [
     "if len(response) == 2:\n",
     "    print(f'SQL Response:\\n{response[0]}\\n')\n",
@@ -917,10 +1045,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "29eeb49c-47f1-44af-aa57-7e3d137c368e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "['Dr. Andy Galpin', 'Dr. Andy Galpin', 'Dr. Andy Galpin', 'Dr. Andy Galpin', 'Dr. Andy Galpin', 'Dr. Andy Galpin', 'Dr. Andy Galpin', 'Dr. Andy Galpin']\n"
+     ]
+    }
+   ],
    "source": [
     "#guests was already imported as metadata during Step 1\n",
     "test = [g for g in guests if g == 'Dr. Andy Galpin'] \n",
@@ -943,13 +1080,25 @@
     "\n",
     "As a final reminder, we are in the business of **Information Retrieval**, meaning we want to enable our users to get the information they need as quickly and as accurately as possible.  This Text2SQL method is one example of being creative with your data that will enable your users to ask additional questions about the data that they would not otherwise have access to...."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae47b227",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9df96d1d",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "rag-env",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "rag-env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
