import by default requirements from app. Pandas is installed by default

--- a/notebooks/1-Data_Preprocessing_Week1_COLAB.ipynb
+++ b/notebooks/1-Data_Preprocessing_Week1_COLAB.ipynb
@@ -96,8 +96,6 @@
    "source": [
     "#visualization tool for displaying long load/processing times\n",
     "!pip install tqdm --quiet\n",
-    "#data processing\n",
-    "!pip install pandas --quiet\n",
     "#workhorse for converting text into embeddings/vectors\n",
     "!pip install sentence-transformers==3.3.1 --quiet\n",
     "#data framework for LLM applications\n",
@@ -133,7 +131,7 @@
    },
    "outputs": [],
    "source": [
-    "# !curl -o preprocessing.py https://raw.githubusercontent.com/americanthinker/rag-applications/main/src/preprocessor/preprocessing.py"
+    "!curl -o preprocessing.py https://raw.githubusercontent.com/americanthinker/rag-applications/main/src/preprocessor/preprocessing.py"
    ]
   },
   {
@@ -143,7 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !curl -o unitesting_utils.py https://raw.githubusercontent.com/americanthinker/rag-applications/main/unitesting_utils.py"
+    "!curl -o unitesting_utils.py https://raw.githubusercontent.com/americanthinker/rag-applications/main/unitesting_utils.py"
    ]
   },
   {
@@ -159,7 +157,7 @@
    },
    "outputs": [],
    "source": [
-    "# !curl -o huberman_labs.json https://raw.githubusercontent.com/americanthinker/rag-applications/main/data/huberman_labs.json"
+    "!curl -o huberman_labs.json https://raw.githubusercontent.com/americanthinker/rag-applications/main/data/huberman_labs.json"
    ]
   },
   {
